[package]
name = "lightfusion"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightgbm3 = { git = "https://github.com/milenkovicm/lightgbm3-rs.git", rev = "072af40c4d59e9675b09f127a1bc4c7f09753fbe" }
tokio = { version = "^1.36", features = ["rt-multi-thread"]}
# datafusion = { version = "36" }
datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="01ff537" }
#datafusion = { git = "https://github.com/apache/arrow-datafusion.git", rev="451d13a" }
thiserror = { version = "1.0"}
log = { version = "0.4" }

async-trait = { version = "0.1" }
parking_lot = { version = "0.12" }

#derivative = { version = "2.2" }
debug-ignore = {version = "1.0"}
argminmax = { version = "0.6", default-features = false, features = ["arrow", "float", "half"]}

[dev-dependencies]
ctor = { version = "0.2"}
env_logger = { version = "0.11" }