[package]
name = "lightfusion"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
#lightgbm3 = { git = "https://github.com/milenkovicm/lightgbm3-rs.git", rev = "99cc5eb" }
lightgbm3 = { version = "1.0.4" }
tokio = { version = "^1.36", features = ["rt-multi-thread"]}
datafusion = { version = "46.0" }

thiserror = { version = "2.0"}
log = { version = "0.4" }

async-trait = { version = "0.1" }
parking_lot = { version = "0.12" }

debug-ignore = { version = "1.0" }
argminmax = { version = "0.6", default-features = false, features = ["arrow", "float", "half"] }

[dev-dependencies]
ctor = { version = "0.4"}
env_logger = { version = "0.11" }